# triage-lab

./: .dockerignore  AGENTS.md  CONTRIBUTING.md  CUTS.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  plan.md
app/: globals.css  layout.tsx  page.tsx
dataset/: README.md  build-combined-triage-reference.mjs  combined-triage-reference.csv  emergency-triage-cleaned.csv  evaluate-intake-assessor.mjs  mimic-iv-ed-demo.md  symptom-acuity-mapping.md  symptom-triage-reference.csv  triage-assessment-questions.md  triage-research-findings.md
prompts/: 01-architect.md  02-scaffolder.md
spike/: .gitignore  (+3 more)
triage-nurse/: .env.example  .gitignore  README.md  justfile  pyproject.toml
triage-nurse/cases/: README.md  case_anaphylaxis.json  case_corneal_abrasion.json  case_epiglottitis.json  case_first_degree_burn.json  case_pneumonia_sepsis.json  case_rib_fractures_haemothorax.json  case_ruptured_aaa.json  case_subarachnoid_hemorrhage.json  case_subdural_hematoma.json  case_unstable_angina.json  demo_shift.json  example_acute_mi.json
triage-nurse/scripts/: print_training_commands.py  run_demo.py
triage-nurse/src/triage_nurse/: __init__.py  actor_logic.py  config.py  cost_tracker.py  dataset.py  harness.py  judge.py  llm.py  patient_logic.py  scoring.py  skyrl_cli.py  skyrl_dataset.py  skyrl_gym_env.py  skyrl_train_entrypoint.py  triage_env.py  world_state.py
triage-nurse/tests/: test_actor_logic.py  test_cost_tracker.py  test_dataset.py  test_harness.py  test_patient_logic.py  test_scoring.py  test_skyrl_dataset.py  test_skyrl_gym_env.py  test_smoke.py
(+28 files in other folders)
