[project]
name = "triage-nurse"
version = "0.0.1"
description = "Long-horizon ED simulation env for OpenReward"
requires-python = ">=3.11"
dependencies = [
    "openreward>=0.1.106",
    "openai>=2.0",
    "anthropic>=0.40",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
skyrl = ["skyrl", "skyrl-gym", "ray[default]"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
